<?xml version="1.0"?>
<package format="2">
  <name>libuvc_camera_ros_sandbox</name>
  <version>0.0.0</version>
  <description>The libuvc_camera_ros_sandbox package</description>

  <maintainer email="toshiyuki67026@gmail.com">Toshiyuki Oshima</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libuvc_camera</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>libuvc_camera</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>libuvc_camera</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>
</package>
